finished recipe and user routes
