# src/routes/index.js
@@ -5,7 +5,8 @@ const express = require('express');
 const api_docsRoute = require('./api-docs');
 const authRoute = require('./authRoute');
 const bookRoute = require('./bookRoute');
-const oauth = require('../config/auth/oauth');
+const { ensureSession } = require('../utils/validation/authValidation');
+
 const recipeRoute = require('./recipeRoute');
 const reviewRoute = require('./reviewRoute');
 const userRoute = require('./userRoute');
@@ -19,22 +20,22 @@ const router = express.Router();
  * Middleware
  * **************************************************************************************/
 // API Documentation
-router.use('/api-docs', api_docsRoute);
+router.use('/api-docs', ensureSession, api_docsRoute);
 
 // Authentication
 router.use('/auth', authRoute);
 
 // Book
-router.use('/book', bookRoute);
+router.use('/book', ensureSession, bookRoute);
 
 // Recipe
-router.use('/recipe', recipeRoute);
+router.use('/recipe', ensureSession, recipeRoute);
 
 // Review
-router.use('/review', reviewRoute);
+router.use('/review', ensureSession, reviewRoute);
 
 // User
-router.use('/user', userRoute);
+router.use('/user', ensureSession, userRoute);
 
 /****************************************************************************************
  * Routes
@@ -43,22 +44,7 @@ router.get('/', utils.handleErrors((req, res) => {
   /* #swagger.tags = ['Root']
       #swagger.description = 'Root'
   */
-
-    try {
-      const authorizationUrl = oauth.generateAuthUrl();
-      console.log('authorizationUrl: ', authorizationUrl);
-      res.redirect(authorizationUrl);
-    } catch (error) {
-      if (error.message === 'invalid_grant') {
-        // Redirect the user back to the authorization URL
-        const authorizationUrl = oauth.generateAuthUrl();
-        res.redirect(authorizationUrl);
-      } else {
-        // Handle other errors
-        console.error(error);
-        res.status(500).send('An error occurred');
-      }
-    }
+  res.send('Welcome to the Cookbook API');
  
 }));
 
